--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ body {
 
 }
 h1 {
-  font-size: 400%;
+  font-size: 300%;
   text-transform: uppercase;
   line-height: 10%;
 }
@@ -175,7 +175,7 @@ nav ul {
     padding: 0;
 }
 .section-list ul li{
-      font-size: 100%;
+      font-size: 70%;
       text-transform: uppercase;
       font-family: 'Druk Wide'; font-weight: 500; font-style: normal;
       margin: auto;
@@ -510,8 +510,23 @@ transform: translate(-50%, -50%);
 width: 85%;
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 900px) {
   .responsive-notice  {
     display: block;
   }
+}
+
+
+@media only screen and (min-width: 1000px) {
+
+  .section-list ul li{
+        font-size: 100%;
+      }
+}
+
+
+@media only screen and (min-width: 1000px) {
+  h1 {
+    font-size: 300%;
+      }
 }
